--- a/app/src/main/res/layout/user_info_frag.xml
+++ b/app/src/main/res/layout/user_info_frag.xml
@@ -49,7 +49,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:text="N1njaC"
+                android:text="null"
                 android:textColor="@color/text_white"
                 android:textSize="18sp"
                 android:textStyle="bold" />
