--- a/app/src/main/res/layout/user_info_frag.xml
+++ b/app/src/main/res/layout/user_info_frag.xml
@@ -40,7 +40,7 @@
                 android:id="@+id/user_icon_iv"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
-                android:src="@drawable/icon"
+                android:src="@drawable/boy"
                 app:civ_border_color="@android:color/white"
                 app:civ_border_width="3dp" />
 
